feat: Implement mobile UI and core editor features
- Redesigns the UI for a mobile-first vertical layout with a compact top control bar.
- Implements "New File", "Close File", and "Word Wrap" functionality.
- Adds a confirmation prompt to prevent losing unsaved changes.
- Fixes a CSS bug where text could overlap line numbers.
- Increments service worker cache to v11 to ensure asset updates.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
 
         <main id="main-content" style="display: none;">
             <div id="file-controls">
-                <button id="open-file-button">Open File from OneDrive</button>
-                <button id="save-file-button" disabled>Save File</button>
-            </div>
-            <div id="editor-container">
-                <textarea id="editor"></textarea>
+                <button id="new-file-button">New</button>
+                <button id="open-file-button">Open</button>
+                <button id="save-file-button" disabled>Save</button>
+                <button id="save-as-button" disabled>Save As</button>
+                <button id="close-file-button" disabled>Close</button>
+                <button id="word-wrap-button">Word Wrap</button>
             </div>
             <div id="file-info">
                 <p>No file selected.</p>
+            </div>
+            <div id="editor-container">
+                <textarea id="editor"></textarea>
             </div>
         </main>
     </div>
