fix: Implement Save As and resolve layout issues
- Implements "Save As" functionality, enabling the saving of new and existing files to any OneDrive location.
- Fixes a critical CSS bug to ensure the editor utilizes the full screen height on vertical mobile layouts.
- Resolves an issue where new files could not be saved.
- Adds a programmatic refresh to the editor to prevent text-from-overlapping-line-numbers rendering bug.
- Increments service worker cache to v12.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <ul id="file-list">
                 <!-- File and folder items will be inserted here by JavaScript -->
             </ul>
+            <div id="save-as-container" style="display: none;">
+                <input type="text" id="save-as-filename" placeholder="Enter filename...">
+                <button id="save-as-confirm-button">Save Here</button>
+            </div>
         </div>
     </div>
 
