feat: Make control buttons more compact
- Shortens the "Word Wrap" button label to "WW".
- Reduces button padding and font size to ensure the control bar fits on a single line on mobile devices.
- Increments service worker cache to v18.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button id="save-file-button" disabled>Save</button>
                 <button id="save-as-button" disabled>Save As</button>
                 <button id="close-file-button" disabled>Close</button>
-                <button id="word-wrap-button">Word Wrap</button>
+                <button id="word-wrap-button">WW</button>
             </div>
             <div id="file-info">
                 <p>No file selected.</p>
