--- a/index.html
+++ b/index.html
@@ -61,24 +61,24 @@
     <script type="importmap">
     {
         "imports": {
-            "codemirror": "https://esm.sh/codemirror@6.0.1",
-            "@codemirror/view": "https://esm.sh/@codemirror/view@6.36.0",
+            "codemirror": "https://esm.sh/codemirror@6.0.1?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3",
+            "@codemirror/view": "https://esm.sh/@codemirror/view@6.26.3?deps=@codemirror/state@6.4.1",
             "@codemirror/state": "https://esm.sh/@codemirror/state@6.4.1",
-            "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@6.2.2",
-            "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.3.1",
-            "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@6.1.6",
-            "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@6.4.9",
-            "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@6.3.1",
-            "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.1",
-            "@codemirror/lang-xml": "https://esm.sh/@codemirror/lang-xml@6.1.0",
-            "@codemirror/lang-php": "https://esm.sh/@codemirror/lang-php@6.0.1",
-            "@codemirror/lang-java": "https://esm.sh/@codemirror/lang-java@6.0.1",
-            "@codemirror/lang-cpp": "https://esm.sh/@codemirror/lang-cpp@6.0.2",
-            "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1",
-            "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.10.0",
-            "@codemirror/language": "https://esm.sh/@codemirror/language@6.10.3",
-            "@codemirror/commands": "https://esm.sh/@codemirror/commands@6.7.1",
-            "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@6.1.2"
+            "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@6.2.2?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.2.5?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@6.1.6?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@6.4.9?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@6.2.1?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.1?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-xml": "https://esm.sh/@codemirror/lang-xml@6.1.0?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-php": "https://esm.sh/@codemirror/lang-php@6.0.1?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-java": "https://esm.sh/@codemirror/lang-java@6.0.1?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-cpp": "https://esm.sh/@codemirror/lang-cpp@6.0.2?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1?deps=@codemirror/state@6.4.1",
+            "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.7.0?deps=@codemirror/state@6.4.1",
+            "@codemirror/language": "https://esm.sh/@codemirror/language@6.10.1?deps=@codemirror/state@6.4.1",
+            "@codemirror/commands": "https://esm.sh/@codemirror/commands@6.5.0?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3",
+            "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@6.1.2?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3"
         }
     }
     </script>
