--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>OneDrive Text Editor</title>
+    <link rel="icon" type="image/png" href="icons/icon-192x192.png">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2196f3">
@@ -61,27 +62,27 @@
     <script type="importmap">
     {
         "imports": {
-            "@codemirror/view": "https://esm.sh/@codemirror/view@6.26.3",
             "@codemirror/state": "https://esm.sh/@codemirror/state@6.4.1",
-            "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@6.2.2",
-            "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.2.5",
-            "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@6.1.6",
-            "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@6.4.9",
-            "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@6.2.1",
-            "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.1",
-            "@codemirror/lang-xml": "https://esm.sh/@codemirror/lang-xml@6.1.0",
-            "@codemirror/lang-php": "https://esm.sh/@codemirror/lang-php@6.0.1",
-            "@codemirror/lang-java": "https://esm.sh/@codemirror/lang-java@6.0.1",
-            "@codemirror/lang-cpp": "https://esm.sh/@codemirror/lang-cpp@6.0.2",
-            "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1",
-            "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.7.0",
-            "@codemirror/language": "https://esm.sh/@codemirror/language@6.10.1",
-            "@codemirror/commands": "https://esm.sh/@codemirror/commands@6.5.0",
-            "@codemirror/search": "https://esm.sh/@codemirror/search@6.5.6",
-            "@codemirror/autocomplete": "https://esm.sh/@codemirror/autocomplete@6.15.0",
-            "@codemirror/lint": "https://esm.sh/@codemirror/lint@6.5.0",
+            "@codemirror/view": "https://esm.sh/@codemirror/view@6.26.3?deps=@codemirror/state@6.4.1",
+            "@codemirror/language": "https://esm.sh/@codemirror/language@6.10.1?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3",
+            "@codemirror/commands": "https://esm.sh/@codemirror/commands@6.5.0?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3",
+            "@codemirror/search": "https://esm.sh/@codemirror/search@6.5.6?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3",
+            "@codemirror/autocomplete": "https://esm.sh/@codemirror/autocomplete@6.15.0?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3",
+            "@codemirror/lint": "https://esm.sh/@codemirror/lint@6.5.0?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3",
             "@lezer/highlight": "https://esm.sh/@lezer/highlight@1.2.0",
-            "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@6.1.2"
+            "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@6.2.2?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3,@codemirror/language@6.10.1",
+            "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.2.5?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3,@codemirror/language@6.10.1",
+            "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@6.1.6?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@6.4.9?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@6.2.1?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.1?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-xml": "https://esm.sh/@codemirror/lang-xml@6.1.0?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-php": "https://esm.sh/@codemirror/lang-php@6.0.1?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-java": "https://esm.sh/@codemirror/lang-java@6.0.1?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-cpp": "https://esm.sh/@codemirror/lang-cpp@6.0.2?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.7.0?deps=@codemirror/state@6.4.1,@codemirror/language@6.10.1",
+            "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@6.1.2?deps=@codemirror/state@6.4.1,@codemirror/view@6.26.3"
         }
     }
     </script>
